# Handmade-Hero

./: .clang-tidy  .gitignore  CMakeLists.txt  build.bat  build.sh  build32.sh  buildAndStartWindows.sh  startWindows.sh  startWindowsDebug.sh
.fleet/: run.json
.github/workflows/: create-executables.yml  main.yml  test.yml
code/: handmade.cpp  handmade.h  win32_handmade.cpp  win32_handmade.h
code/common/: typedefs.h
data/: test.out
defs/: handmade.def
